--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/edge-functions": "^2.2.0",
+    "@netlify/functions": "^2.4.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
